# testingsnake

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: config.h  game.h  hardcoresnake.h  logger.h  multiplayer.h  rendergame.h  rendermenu.h
libs/: MultiplayerApi.c
src/: game.cpp  hardcoresnake.cpp  main.cpp  multiplayer.cpp  rendergame.cpp  rendermenu.cpp
